# vectorm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  cliff.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  enhancement.yml  feature_request.yml  task.yml
.github/workflows/: default.yml  release.yml  stable.yml
.taskfile/: devtools.yml  python.yml  version.yml
examples/qdrant/: docker-compose.yml  example.py
vectorm/: __init__.py  document.py  filter.py  migrate.py  paginate.py  store.py  types.py
vectorm/backend/: __init__.py  base.py
vectorm/backend/qdrant/: __init__.py  backend.py  utils.py  visitor.py
