[project]
name = "vectorm"
version = "0.2.0"
description = "ORM layer for vector databases"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Timothy Pogue", email = "me@pogue.dev"},
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
license = {text = "ISC"}
dependencies = [
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
]

[project.urls]
repository = "https://github.com/wizrds/vectorm"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "coverage>=7.13.5",
    "pre-commit>=4.6.0",
    "gitlint>=0.19.1",
    "respx>=0.23.1",
    "polyfactory>=3.3.0",
    "rich>=15.0.0",
]
qdrant = ["qdrant-client>=1.17.1"]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.17.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vectorm"]

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["vectorm"]

[tool.coverage.report]
ignore_errors = "true"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 100
exclude = ["tests", "examples"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
lines-after-imports = 2
